# binex2rtcm

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: example.toml
sample/: CHUL_20260327_120000.bnx  CHUL_20260327_120000.rtcm3
src/binex2rtcm/: __init__.py  app.py  config.py  errors.py  gnss_time.py  logging_utils.py  monitor.py  pipeline.py  stats.py  stream_logging.py  validation.py
src/binex2rtcm/binex/: __init__.py  decoder.py  encoder.py  framer.py  scheduler.py
src/binex2rtcm/io/: __init__.py  base.py  file_replay.py  ntrip_client.py  reconnect.py  tcp.py
src/binex2rtcm/model/: __init__.py  ephemeris.py  observation.py  signals.py  station.py
src/binex2rtcm/rinex/: __init__.py  async_export.py  crx.py  header.py  nav_writer.py  obs_writer.py  segment.py
src/binex2rtcm/rtcm/: __init__.py  bitbuffer.py  decoder.py  encoder.py  framer.py  messages.py  scheduler.py
tests/: README.md  stream_roundtrip_validation.example.toml  stream_roundtrip_validation.py  test_input_reconnect.py  test_pipeline_cleanup.py  test_rinex_async_export.py  test_rtcm_decoder_checks.py  test_station_metadata.py
tools/ringo/: ringo.tgz
