[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binex2rtcm"
version = "0.1.0"
description = "Real-time GNSS BINEX/RTCM stream transcoder."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-2-Clause" }
authors = [
  { name = "Sejong University Navigation System Lab" }
]
dependencies = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: GIS",
]

[project.optional-dependencies]
dev = [
  "pyrtcm>=1.1.5",
]

[project.scripts]
binex2rtcm = "binex2rtcm.app:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

